# Soc-Open-Environment

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  graders.py  mitre.py  models.py  risk.py  tasks.py
server/: app.py
